--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
+    "socket.io": "^4.5.2",
     "soket.io": "^0.0.1-security"
   }
 }
